# paperboy

./: .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
demo/: demo.tape  mcp.json
deploy/: deploy.sh
docs/: deploy.md  setup.md
src/paperboy/: __init__.py  arxiv.py  books.py  config.py  delivery.py  doi.py  models.py  net.py  oauth.py  openalex.py  resolver.py  s2.py  server.py  setup_wizard.py  zotero_client.py
tests/: conftest.py  test_arxiv.py  test_books.py  test_config.py  test_delivery.py  test_doi.py  test_models.py  test_oauth.py  test_openalex.py  test_resolver.py  test_s2.py  test_server.py  test_setup_wizard.py  test_zotero_client.py
