[project]
name = "paperboy"
version = "0.1.0"
description = "Remote MCP server that delivers research papers to your e-reader, with Zotero as the source of truth"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Ellis", email = "michaelellis003@gmail.com" }]
dependencies = [
    "fastmcp>=3.0",
    "pyzotero>=1.5",
    "httpx>=0.27",
]

[project.scripts]
paperboy = "paperboy.server:main"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "ty>=0.0.1a21",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperboy"]

# --- Lint & format: Google Python style ---
[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle (Google convention below)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"] # tests explain themselves

[tool.ruff.format]
docstring-code-format = true

# --- Type checking ---
[tool.ty.environment]
python = "./.venv"

# --- Tests ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=paperboy --cov-report=term-missing"

[tool.coverage.run]
source = ["src/paperboy"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_also = ["if __name__ == .__main__.:"]
